@@ -8,7 +8,7 @@ BEGIN
   $| = 1;
   chdir 't' if -d 't';
   unshift @INC, '../lib'; # for running manually
-  plan tests => 20;
+  plan tests => 36;
   }
 
 # testing of Math::BigRat
@@ -43,6 +43,35 @@ $x = Math::BigRat->new('7/5'); $x *= '3/2';
 ok ($x,'21/10');
 $x -= '0.1';
 ok ($x,'2');	# not 21/10
+
+$x = Math::BigRat->new('2/3');		$y = Math::BigRat->new('3/2');
+ok ($x > $y,'');		
+ok ($x < $y,1);
+ok ($x == $y,'');
+
+$x = Math::BigRat->new('-2/3');		$y = Math::BigRat->new('3/2');
+ok ($x > $y,'');		
+ok ($x < $y,'1');
+ok ($x == $y,'');
+
+$x = Math::BigRat->new('-2/3');		$y = Math::BigRat->new('-2/3');
+ok ($x > $y,'');		
+ok ($x < $y,'');
+ok ($x == $y,'1');
+
+$x = Math::BigRat->new('-2/3');		$y = Math::BigRat->new('-1/3');
+ok ($x > $y,'');		
+ok ($x < $y,'1');
+ok ($x == $y,'');
+
+$x = Math::BigRat->new('-124');		$y = Math::BigRat->new('-122');
+ok ($x->bacmp($y),1);
+
+$x = Math::BigRat->new('-124');		$y = Math::BigRat->new('-122');
+ok ($x->bcmp($y),-1);
+
+$x = Math::BigRat->new('-144/9'); $x->bsqrt(); ok ($x,'NaN');
+$x = Math::BigRat->new('144/9');  $x->bsqrt(); ok ($x,'4');
 
 # done
 
